unpackaged/main/default/objects/User/fields/SEO_Meta_Title_and_Descriptions_task__c.field-meta.xml
<CustomField>
    <fullName>SEO_Meta_Title_and_Descriptions_task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO Meta Title and Descriptions task</label>
    <type>Checkbox</type>
</CustomField>