unpackaged/main/default/objects/User/fields/SEO_Migration_user__c.field-meta.xml
<CustomField>
    <fullName>SEO_Migration_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO Migration user</label>
    <type>Checkbox</type>
</CustomField>