unpackaged/main/default/objects/User/fields/SEO_Optimizations_Monthly__c.field-meta.xml
<CustomField>
    <fullName>SEO_Optimizations_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO Optimizations Monthly</label>
    <type>Checkbox</type>
</CustomField>