unpackaged/main/default/objects/User/fields/SEO_Pro_Custom__c.field-meta.xml
<CustomField>
    <fullName>SEO_Pro_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO Pro - Custom</label>
    <type>Checkbox</type>
</CustomField>