unpackaged/main/default/objects/User/fields/SEO_Pro_Pro__c.field-meta.xml
<CustomField>
    <fullName>SEO_Pro_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO Pro - Pro</label>
    <type>Checkbox</type>
</CustomField>