unpackaged/main/default/objects/User/fields/SEO_QA_queue__c.field-meta.xml
<CustomField>
    <fullName>SEO_QA_queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO QA queue</label>
    <type>Checkbox</type>
</CustomField>