unpackaged/main/default/objects/User/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Side</label>
    <type>Checkbox</type>
</CustomField>