unpackaged/main/default/objects/User/fields/Side_Cases__c.field-meta.xml
<CustomField>
    <fullName>Side_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Side Cases</label>
    <type>Checkbox</type>
</CustomField>