unpackaged/main/default/objects/User/fields/Social_Ads__c.field-meta.xml
<CustomField>
    <fullName>Social_Ads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Ads</label>
    <type>Checkbox</type>
</CustomField>