unpackaged/main/default/objects/User/fields/Social_Media_Ads__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Ads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Media Ads</label>
    <type>Checkbox</type>
</CustomField>