unpackaged/main/default/objects/User/fields/Social_Media_Reels__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Reels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Media Reels</label>
    <type>Checkbox</type>
</CustomField>