unpackaged/main/default/objects/User/fields/SSPW__c.field-meta.xml
<CustomField>
    <fullName>SSPW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Property website</description>
    <label>SSPW</label>
    <type>Checkbox</type>
</CustomField>