unpackaged/main/default/objects/User/fields/Technical_PM__c.field-meta.xml
<CustomField>
    <fullName>Technical_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical PM</label>
    <type>Checkbox</type>
</CustomField>