unpackaged/main/default/objects/User/fields/Template_Change__c.field-meta.xml
<CustomField>
    <fullName>Template_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Change</label>
    <type>Checkbox</type>
</CustomField>