unpackaged/main/default/objects/User/fields/TTV_Beta__c.field-meta.xml
<CustomField>
    <fullName>TTV_Beta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TTV Beta</label>
    <type>Checkbox</type>
</CustomField>