unpackaged/main/default/objects/User/fields/Universal_GA_ID_task__c.field-meta.xml
<CustomField>
    <fullName>Universal_GA_ID_task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Universal GA ID task</label>
    <type>Checkbox</type>
</CustomField>