unpackaged/main/default/objects/User/fields/Video_DPC__c.field-meta.xml
<CustomField>
    <fullName>Video_DPC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video DPC</label>
    <type>Checkbox</type>
</CustomField>