unpackaged/main/default/objects/User/fields/Video_Pod_Queue__c.field-meta.xml
<CustomField>
    <fullName>Video_Pod_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Pod Queue</label>
    <type>Checkbox</type>
</CustomField>