unpackaged/main/default/objects/User/fields/VIP_Custom_Offering__c.field-meta.xml
<CustomField>
    <fullName>VIP_Custom_Offering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP/ Custom Offering</label>
    <type>Checkbox</type>
</CustomField>