unpackaged/main/default/objects/User/fields/WB_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>WB_Team_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WB Team Lead</label>
    <type>Checkbox</type>
</CustomField>