unpackaged/main/default/objects/User/fields/Weekly_GBP_Posts__c.field-meta.xml
<CustomField>
    <fullName>Weekly_GBP_Posts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly GBP Posts</label>
    <type>Checkbox</type>
</CustomField>