unpackaged/main/default/objects/User/fields/White_Label_App__c.field-meta.xml
<CustomField>
    <fullName>White_Label_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>White Label App</label>
    <type>Checkbox</type>
</CustomField>