unpackaged/main/default/objects/User/listViews/Chat_Users.listView-meta.xml
<ListView>
    <fullName>Chat_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>LIVEAGENT_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LIVEAGENT_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Chat Users</label>
</ListView>