unpackaged/main/default/objects/User/listViews/Partner_Portal.listView-meta.xml
<ListView>
    <fullName>Partner_Portal</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>SALES.CONTACT.NAME</columns>
    <columns>KNOWLEDGE_USER</columns>
    <columns>Role_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>P,C,c,b</value>
    </filters>
    <label>Partner &amp; Portal</label>
</ListView>