unpackaged/main/default/objects/User/listViews/Product_Execution.listView-meta.xml
<ListView>
    <fullName>Product_Execution</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>PET_Pro__c</columns>
    <columns>PET_Advanced__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>equals</operation>
        <value>PFT</value>
    </filters>
    <filters>
        <field>CORE.USERS.DIVISION</field>
        <operation>equals</operation>
        <value>Product Execution</value>
    </filters>
    <label>Product Execution</label>
</ListView>